--- a/Serrano/Criando_rede_neural.ipynb
+++ b/Serrano/Criando_rede_neural.ipynb
@@ -28,22 +28,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential # Modelo Sequencial\n",
     "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten, Conv2D, MaxPooling2D\n",
+    "from tensorflow.keras.callbacks import TensorBoard\n",
     "import pickle\n",
-    "\n",
-    "import numpy as np\n",
-    "\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "NAME = 'Verificação_de_letras-cnn-64x2-{}'.format(int(time.time()))\n",
+    "\n",
+    "tensorboard = TensorBoard(log_dir = 'logs/{}'.format(NAME)) # Para ter uma visualização do treinamento da rede neural\n",
+    "\n",
+    "#  tensorboard --logdir=logs/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -73,22 +87,26 @@
      "name": "stdout",
      "text": [
       "Epoch 1/3\n",
-      "95/95 [==============================] - 10s 110ms/step - loss: 0.9355 - accuracy: 0.8092 - val_loss: 0.1690 - val_accuracy: 0.9373\n",
+      " 1/95 [..............................] - ETA: 0s - loss: 0.6909 - accuracy: 0.6250WARNING:tensorflow:From C:\\Users\\Lucas_ccujizf\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\ops\\summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
+      "Instructions for updating:\n",
+      "use `tf.profiler.experimental.stop` instead.\n",
+      " 2/95 [..............................] - ETA: 25s - loss: 2.4427 - accuracy: 0.4844WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0862s vs `on_train_batch_end` time: 0.4632s). Check your callbacks.\n",
+      "95/95 [==============================] - 10s 108ms/step - loss: 0.5261 - accuracy: 0.7750 - val_loss: 0.2555 - val_accuracy: 0.8687\n",
       "Epoch 2/3\n",
-      "95/95 [==============================] - 9s 99ms/step - loss: 0.1333 - accuracy: 0.9502 - val_loss: 0.1100 - val_accuracy: 0.9522\n",
+      "95/95 [==============================] - 10s 105ms/step - loss: 0.2325 - accuracy: 0.8941 - val_loss: 0.1997 - val_accuracy: 0.9224\n",
       "Epoch 3/3\n",
-      "95/95 [==============================] - 10s 102ms/step - loss: 0.0808 - accuracy: 0.9784 - val_loss: 0.0769 - val_accuracy: 0.9701\n"
+      "95/95 [==============================] - 10s 105ms/step - loss: 0.1766 - accuracy: 0.9233 - val_loss: 0.1963 - val_accuracy: 0.9254\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x24d7c8f0e20>"
+       "<tensorflow.python.keras.callbacks.History at 0x24d7c90aa00>"
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 49
     }
    ],
    "source": [
@@ -107,13 +125,66 @@
     "# Terceira Layer\n",
     "model.add(Flatten()) #Deixa a rede neural em 2D\n",
     "model.add(Dense(64))\n",
+    "model.add(Activation('relu'))\n",
     "\n",
     "# Layer de saída\n",
     "model.add(Dense(1))\n",
     "model.add(Activation('sigmoid'))\n",
     "\n",
     "model.compile(loss = \"binary_crossentropy\", optimizer = \"adam\", metrics = ['accuracy'])\n",
-    "model.fit(X, y, batch_size=32, epochs=3, validation_split=0.1)\n",
+    "model.fit(X, y, batch_size=32, epochs=3, validation_split=0.1, callbacks = [tensorboard])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "INFO:tensorflow:Assets written to: treinando_rede.model\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('treinando_rede.model') # Salvando Rede Neural"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_model = tf.keras.models.load_model('treinando_rede.model') # Carregando rede"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "Unrecognized arguments in `TensorBoard` Callback: {'logdir'}",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-40-1be20edae35e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcallbacks\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTensorBoard\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtensorboard\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTensorBoard\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlogdir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'logs/{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNAME\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\keras\\callbacks.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, log_dir, histogram_freq, write_graph, write_images, update_freq, profile_batch, embeddings_freq, embeddings_metadata, **kwargs)\u001b[0m\n\u001b[0;32m   1917\u001b[0m     \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTensorBoard\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1918\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_supports_tf_logs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1919\u001b[1;33m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_kwargs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1920\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1921\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpath_to_string\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlog_dir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\keras\\callbacks.py\u001b[0m in \u001b[0;36m_validate_kwargs\u001b[1;34m(self, kwargs)\u001b[0m\n\u001b[0;32m   1961\u001b[0m     \u001b[1;31m# Only allow kwargs that were supported in V1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1962\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0munrecognized_kwargs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1963\u001b[1;33m       raise ValueError('Unrecognized arguments in `TensorBoard` '\n\u001b[0m\u001b[0;32m   1964\u001b[0m                        'Callback: ' + str(unrecognized_kwargs))\n\u001b[0;32m   1965\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unrecognized arguments in `TensorBoard` Callback: {'logdir'}"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
