--- a/Serrano/Criando_rede_neural.ipynb
+++ b/Serrano/Criando_rede_neural.ipynb
@@ -28,21 +28,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential # Modelo Sequencial\n",
     "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten, Conv2D, MaxPooling2D\n",
-    "from tensorflow.keras.callbacks import TensorBoard\n",
+    "from tensorflow.keras.callbacks import TensorBoard # Para visualização do Modelo da Rede Neural\n",
     "import pickle\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,34 +79,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Epoch 1/3\n",
-      " 1/95 [..............................] - ETA: 0s - loss: 0.6909 - accuracy: 0.6250WARNING:tensorflow:From C:\\Users\\Lucas_ccujizf\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\ops\\summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
-      "Instructions for updating:\n",
-      "use `tf.profiler.experimental.stop` instead.\n",
-      " 2/95 [..............................] - ETA: 25s - loss: 2.4427 - accuracy: 0.4844WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0862s vs `on_train_batch_end` time: 0.4632s). Check your callbacks.\n",
-      "95/95 [==============================] - 10s 108ms/step - loss: 0.5261 - accuracy: 0.7750 - val_loss: 0.2555 - val_accuracy: 0.8687\n",
-      "Epoch 2/3\n",
-      "95/95 [==============================] - 10s 105ms/step - loss: 0.2325 - accuracy: 0.8941 - val_loss: 0.1997 - val_accuracy: 0.9224\n",
-      "Epoch 3/3\n",
-      "95/95 [==============================] - 10s 105ms/step - loss: 0.1766 - accuracy: 0.9233 - val_loss: 0.1963 - val_accuracy: 0.9254\n"
+      "Epoch 1/10\n",
+      " 2/95 [..............................] - ETA: 49s - loss: 1.5909 - accuracy: 0.5000WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0790s vs `on_train_batch_end` time: 0.9769s). Check your callbacks.\n",
+      "95/95 [==============================] - 10s 109ms/step - loss: 0.4458 - accuracy: 0.7965 - val_loss: 0.2234 - val_accuracy: 0.8836\n",
+      "Epoch 2/10\n",
+      "95/95 [==============================] - 9s 96ms/step - loss: 0.1973 - accuracy: 0.9101 - val_loss: 0.1758 - val_accuracy: 0.9104\n",
+      "Epoch 3/10\n",
+      "95/95 [==============================] - 10s 103ms/step - loss: 0.1537 - accuracy: 0.9376 - val_loss: 0.1373 - val_accuracy: 0.9493\n",
+      "Epoch 4/10\n",
+      "95/95 [==============================] - 9s 96ms/step - loss: 0.1092 - accuracy: 0.9582 - val_loss: 0.1070 - val_accuracy: 0.9582\n",
+      "Epoch 5/10\n",
+      "95/95 [==============================] - 9s 96ms/step - loss: 0.0792 - accuracy: 0.9738 - val_loss: 0.0870 - val_accuracy: 0.9761\n",
+      "Epoch 6/10\n",
+      "95/95 [==============================] - 9s 92ms/step - loss: 0.0654 - accuracy: 0.9794 - val_loss: 0.0733 - val_accuracy: 0.9701\n",
+      "Epoch 7/10\n",
+      "95/95 [==============================] - 9s 92ms/step - loss: 0.0505 - accuracy: 0.9844 - val_loss: 0.0534 - val_accuracy: 0.9791\n",
+      "Epoch 8/10\n",
+      "95/95 [==============================] - 10s 105ms/step - loss: 0.0336 - accuracy: 0.9917 - val_loss: 0.0493 - val_accuracy: 0.9821\n",
+      "Epoch 9/10\n",
+      "95/95 [==============================] - 11s 112ms/step - loss: 0.0256 - accuracy: 0.9947 - val_loss: 0.0366 - val_accuracy: 0.9881\n",
+      "Epoch 10/10\n",
+      "95/95 [==============================] - 9s 97ms/step - loss: 0.0222 - accuracy: 0.9950 - val_loss: 0.0346 - val_accuracy: 0.9910\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x24d7c90aa00>"
+       "<tensorflow.python.keras.callbacks.History at 0x24d7c648be0>"
       ]
      },
      "metadata": {},
-     "execution_count": 49
+     "execution_count": 56
     }
    ],
    "source": [
@@ -132,13 +143,13 @@
     "model.add(Activation('sigmoid'))\n",
     "\n",
     "model.compile(loss = \"binary_crossentropy\", optimizer = \"adam\", metrics = ['accuracy'])\n",
-    "model.fit(X, y, batch_size=32, epochs=3, validation_split=0.1, callbacks = [tensorboard])\n",
+    "model.fit(X, y, batch_size=32, epochs=10, validation_split=0.1, callbacks = [tensorboard])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
