--- a/Serrano/Criando_rede_neural.ipynb
+++ b/Serrano/Criando_rede_neural.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,37 +87,40 @@
      "name": "stdout",
      "text": [
       "Epoch 1/10\n",
-      " 2/95 [..............................] - ETA: 49s - loss: 1.5909 - accuracy: 0.5000WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0790s vs `on_train_batch_end` time: 0.9769s). Check your callbacks.\n",
-      "95/95 [==============================] - 10s 109ms/step - loss: 0.4458 - accuracy: 0.7965 - val_loss: 0.2234 - val_accuracy: 0.8836\n",
+      " 1/95 [..............................] - ETA: 0s - loss: 0.6952 - accuracy: 0.5625WARNING:tensorflow:From C:\\Users\\Lucas_ccujizf\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\ops\\summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
+      "Instructions for updating:\n",
+      "use `tf.profiler.experimental.stop` instead.\n",
+      " 2/95 [..............................] - ETA: 23s - loss: 1.1454 - accuracy: 0.5000WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0760s vs `on_train_batch_end` time: 0.4311s). Check your callbacks.\n",
+      "95/95 [==============================] - 8s 86ms/step - loss: 0.4237 - accuracy: 0.8088 - val_loss: 0.1779 - val_accuracy: 0.9284\n",
       "Epoch 2/10\n",
-      "95/95 [==============================] - 9s 96ms/step - loss: 0.1973 - accuracy: 0.9101 - val_loss: 0.1758 - val_accuracy: 0.9104\n",
+      "95/95 [==============================] - 8s 82ms/step - loss: 0.1704 - accuracy: 0.9313 - val_loss: 0.1204 - val_accuracy: 0.9522\n",
       "Epoch 3/10\n",
-      "95/95 [==============================] - 10s 103ms/step - loss: 0.1537 - accuracy: 0.9376 - val_loss: 0.1373 - val_accuracy: 0.9493\n",
+      "95/95 [==============================] - 8s 80ms/step - loss: 0.1152 - accuracy: 0.9582 - val_loss: 0.0879 - val_accuracy: 0.9701\n",
       "Epoch 4/10\n",
-      "95/95 [==============================] - 9s 96ms/step - loss: 0.1092 - accuracy: 0.9582 - val_loss: 0.1070 - val_accuracy: 0.9582\n",
+      "95/95 [==============================] - 9s 91ms/step - loss: 0.0957 - accuracy: 0.9632 - val_loss: 0.0747 - val_accuracy: 0.9791\n",
       "Epoch 5/10\n",
-      "95/95 [==============================] - 9s 96ms/step - loss: 0.0792 - accuracy: 0.9738 - val_loss: 0.0870 - val_accuracy: 0.9761\n",
+      "95/95 [==============================] - 9s 96ms/step - loss: 0.0676 - accuracy: 0.9791 - val_loss: 0.0638 - val_accuracy: 0.9791\n",
       "Epoch 6/10\n",
-      "95/95 [==============================] - 9s 92ms/step - loss: 0.0654 - accuracy: 0.9794 - val_loss: 0.0733 - val_accuracy: 0.9701\n",
+      "95/95 [==============================] - 9s 96ms/step - loss: 0.0371 - accuracy: 0.9920 - val_loss: 0.0486 - val_accuracy: 0.9791\n",
       "Epoch 7/10\n",
-      "95/95 [==============================] - 9s 92ms/step - loss: 0.0505 - accuracy: 0.9844 - val_loss: 0.0534 - val_accuracy: 0.9791\n",
+      "95/95 [==============================] - 9s 92ms/step - loss: 0.0251 - accuracy: 0.9957 - val_loss: 0.0381 - val_accuracy: 0.9881\n",
       "Epoch 8/10\n",
-      "95/95 [==============================] - 10s 105ms/step - loss: 0.0336 - accuracy: 0.9917 - val_loss: 0.0493 - val_accuracy: 0.9821\n",
+      "95/95 [==============================] - 9s 97ms/step - loss: 0.0204 - accuracy: 0.9970 - val_loss: 0.0395 - val_accuracy: 0.9821\n",
       "Epoch 9/10\n",
-      "95/95 [==============================] - 11s 112ms/step - loss: 0.0256 - accuracy: 0.9947 - val_loss: 0.0366 - val_accuracy: 0.9881\n",
+      "95/95 [==============================] - 9s 94ms/step - loss: 0.0160 - accuracy: 0.9980 - val_loss: 0.0286 - val_accuracy: 0.9910\n",
       "Epoch 10/10\n",
-      "95/95 [==============================] - 9s 97ms/step - loss: 0.0222 - accuracy: 0.9950 - val_loss: 0.0346 - val_accuracy: 0.9910\n"
+      "95/95 [==============================] - 8s 87ms/step - loss: 0.0088 - accuracy: 0.9990 - val_loss: 0.0345 - val_accuracy: 0.9851\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x24d7c648be0>"
+       "<tensorflow.python.keras.callbacks.History at 0x206caf36640>"
       ]
      },
      "metadata": {},
-     "execution_count": 56
+     "execution_count": 6
     }
    ],
    "source": [
@@ -149,13 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "WARNING:tensorflow:From C:\\Users\\Lucas_ccujizf\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\training\\tracking\\tracking.py:111: Model.state_updates (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
+      "WARNING:tensorflow:From C:\\Users\\Lucas_ccujizf\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\training\\tracking\\tracking.py:111: Layer.updates (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
       "INFO:tensorflow:Assets written to: treinando_rede.model\\assets\n"
      ]
     }
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,23 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "Unrecognized arguments in `TensorBoard` Callback: {'logdir'}",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-40-1be20edae35e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcallbacks\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTensorBoard\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtensorboard\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTensorBoard\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlogdir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'logs/{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNAME\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\keras\\callbacks.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, log_dir, histogram_freq, write_graph, write_images, update_freq, profile_batch, embeddings_freq, embeddings_metadata, **kwargs)\u001b[0m\n\u001b[0;32m   1917\u001b[0m     \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTensorBoard\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1918\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_supports_tf_logs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1919\u001b[1;33m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_kwargs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1920\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1921\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpath_to_string\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlog_dir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\keras\\callbacks.py\u001b[0m in \u001b[0;36m_validate_kwargs\u001b[1;34m(self, kwargs)\u001b[0m\n\u001b[0;32m   1961\u001b[0m     \u001b[1;31m# Only allow kwargs that were supported in V1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1962\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0munrecognized_kwargs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1963\u001b[1;33m       raise ValueError('Unrecognized arguments in `TensorBoard` '\n\u001b[0m\u001b[0;32m   1964\u001b[0m                        'Callback: ' + str(unrecognized_kwargs))\n\u001b[0;32m   1965\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Unrecognized arguments in `TensorBoard` Callback: {'logdir'}"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
