--- a/Criando_rede_neural.ipynb
+++ b/Criando_rede_neural.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -87,40 +87,40 @@
      "name": "stdout",
      "text": [
       "Epoch 1/10\n",
-      " 1/95 [..............................] - ETA: 0s - loss: 0.6952 - accuracy: 0.5625WARNING:tensorflow:From C:\\Users\\Lucas_ccujizf\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\ops\\summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
+      " 1/95 [..............................] - ETA: 0s - loss: 0.6943 - accuracy: 0.5312WARNING:tensorflow:From C:\\Users\\Lucas_ccujizf\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\ops\\summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
       "Instructions for updating:\n",
       "use `tf.profiler.experimental.stop` instead.\n",
-      " 2/95 [..............................] - ETA: 23s - loss: 1.1454 - accuracy: 0.5000WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0760s vs `on_train_batch_end` time: 0.4311s). Check your callbacks.\n",
-      "95/95 [==============================] - 8s 86ms/step - loss: 0.4237 - accuracy: 0.8088 - val_loss: 0.1779 - val_accuracy: 0.9284\n",
+      " 2/95 [..............................] - ETA: 26s - loss: 0.7579 - accuracy: 0.4688WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.1225s vs `on_train_batch_end` time: 0.4450s). Check your callbacks.\n",
+      "95/95 [==============================] - 11s 117ms/step - loss: 0.3779 - accuracy: 0.8171 - val_loss: 0.1523 - val_accuracy: 0.9403\n",
       "Epoch 2/10\n",
-      "95/95 [==============================] - 8s 82ms/step - loss: 0.1704 - accuracy: 0.9313 - val_loss: 0.1204 - val_accuracy: 0.9522\n",
+      "95/95 [==============================] - 11s 116ms/step - loss: 0.1621 - accuracy: 0.9310 - val_loss: 0.1087 - val_accuracy: 0.9493\n",
       "Epoch 3/10\n",
-      "95/95 [==============================] - 8s 80ms/step - loss: 0.1152 - accuracy: 0.9582 - val_loss: 0.0879 - val_accuracy: 0.9701\n",
+      "95/95 [==============================] - 11s 112ms/step - loss: 0.1187 - accuracy: 0.9519 - val_loss: 0.1718 - val_accuracy: 0.9194\n",
       "Epoch 4/10\n",
-      "95/95 [==============================] - 9s 91ms/step - loss: 0.0957 - accuracy: 0.9632 - val_loss: 0.0747 - val_accuracy: 0.9791\n",
+      "95/95 [==============================] - 10s 109ms/step - loss: 0.1055 - accuracy: 0.9595 - val_loss: 0.0627 - val_accuracy: 0.9761\n",
       "Epoch 5/10\n",
-      "95/95 [==============================] - 9s 96ms/step - loss: 0.0676 - accuracy: 0.9791 - val_loss: 0.0638 - val_accuracy: 0.9791\n",
+      "95/95 [==============================] - 10s 108ms/step - loss: 0.0589 - accuracy: 0.9801 - val_loss: 0.0497 - val_accuracy: 0.9821\n",
       "Epoch 6/10\n",
-      "95/95 [==============================] - 9s 96ms/step - loss: 0.0371 - accuracy: 0.9920 - val_loss: 0.0486 - val_accuracy: 0.9791\n",
+      "95/95 [==============================] - 11s 112ms/step - loss: 0.0429 - accuracy: 0.9887 - val_loss: 0.0445 - val_accuracy: 0.9791\n",
       "Epoch 7/10\n",
-      "95/95 [==============================] - 9s 92ms/step - loss: 0.0251 - accuracy: 0.9957 - val_loss: 0.0381 - val_accuracy: 0.9881\n",
+      "95/95 [==============================] - 10s 105ms/step - loss: 0.0273 - accuracy: 0.9947 - val_loss: 0.0321 - val_accuracy: 0.9910\n",
       "Epoch 8/10\n",
-      "95/95 [==============================] - 9s 97ms/step - loss: 0.0204 - accuracy: 0.9970 - val_loss: 0.0395 - val_accuracy: 0.9821\n",
+      "95/95 [==============================] - 11s 111ms/step - loss: 0.0201 - accuracy: 0.9967 - val_loss: 0.0307 - val_accuracy: 0.9910\n",
       "Epoch 9/10\n",
-      "95/95 [==============================] - 9s 94ms/step - loss: 0.0160 - accuracy: 0.9980 - val_loss: 0.0286 - val_accuracy: 0.9910\n",
+      "95/95 [==============================] - 11s 113ms/step - loss: 0.0159 - accuracy: 0.9983 - val_loss: 0.0311 - val_accuracy: 0.9940\n",
       "Epoch 10/10\n",
-      "95/95 [==============================] - 8s 87ms/step - loss: 0.0088 - accuracy: 0.9990 - val_loss: 0.0345 - val_accuracy: 0.9851\n"
+      "95/95 [==============================] - 11s 111ms/step - loss: 0.0117 - accuracy: 0.9990 - val_loss: 0.0278 - val_accuracy: 0.9881\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x206caf36640>"
+       "<tensorflow.python.keras.callbacks.History at 0x25ae01856a0>"
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 7
     }
    ],
    "source": [
