--- a/Prerarando_treinamento.ipynb
+++ b/Prerarando_treinamento.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +37,13 @@
     "import os\n",
     "import cv2\n",
     "\n",
-    "DATADIR = \"training\" #Onde estão sendo armazenados os arquivos\n",
+    "DATADIR = \"dataset\\\\training\" #Onde estão sendo armazenados os arquivos\n",
     "CATEGORIES = [\"A\",\"B\"] #Possibilidades de estudo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,24 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "3348\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(training_data)) #Quantidade de dados verificados no dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,17 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1\n0\n1\n0\n1\n1\n0\n1\n0\n0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for sample in training_data[:10]:\n",
     "    print(sample[1])\n",
@@ -113,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
